--- a/views/tcc_desktop_widget.yml
+++ b/views/tcc_desktop_widget.yml
@@ -1,8 +1,9 @@
 type: scrollbox
 widget_id: tcc-desktop-widget
-api_url: /module/tcc/get_scroll_widget/kTCCServiceDesktopFolder
+api_url: /module/tcc/get_scroll_widget/kTCCServiceSystemPolicyDesktopFolder
 i18n_title: tcc.DesktopFolder
 icon: fa-desktop
 listing_link: /show/listing/tcc/tcc
 search_key: client
 i18n_empty_result: tcc.nodata
+badge: count
