--- a/views/tcc_removable_volumes_widget.yml
+++ b/views/tcc_removable_volumes_widget.yml
@@ -1,8 +1,9 @@
 type: scrollbox
 widget_id: tcc-removable-volumes-widget
-api_url: /module/tcc/get_scroll_widget/kTCCServiceRemovableVolumes
+api_url: /module/tcc/get_scroll_widget/kTCCServiceSystemPolicyRemovableVolumes
 i18n_title: tcc.RemovableVolumes
 icon: fa-eject
 listing_link: /show/listing/tcc/tcc
 search_key: client
 i18n_empty_result: tcc.nodata
+badge: count
