--- a/composer.json
+++ b/composer.json
@@ -1,1 +1,5 @@
-{"require":{"php":"^7.0"},"license":"MIT","name":"tuxudo/tcc","description":"tcc module for munkireport."}
+{
+  "license":"MIT",
+  "name":"tuxudo/tcc",
+  "description":"tcc module for munkireport."
+}
